# copilot-instruction-agent

./: .gitignore  API_USAGE_VERIFICATION.md  BEST_PRACTICES_INTEGRATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  FIXES.md  LICENSE  MARKETING.md  OPEN_SOURCE_SETUP.md  README.md  TEST_RESULTS.md  analysis-report.md  pyproject.toml  reposentinel  reposentinel.yaml.example
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmd/reposentinel/: __init__.py  main.py
core/: __init__.py  config.py  logger.py
core/analyzers/: __init__.py  base.py  runner.py
core/best_practices/: __init__.py  checker.py  loader.py
core/best_practices/practices/: dotnet.yaml  node.yaml  python.yaml
core/instructions/: __init__.py  generator.py
core/profiler/: __init__.py  detect.py
core/report/: writer.py
core/risk/: __init__.py  scorer.py
core/rules/: __init__.py  builder.py
docs/: BEST_PRACTICES.md  README.md
engines/: __init__.py
engines/dotnet/: __init__.py  architecture.py
llm/: __init__.py  client.py
reposentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
